Add additional page info to index.html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/img/logo-round.svg" />
+  <link rel="apple-touch-icon" href="/img/logo-round.svg">
+  <meta name="theme-color" content="#0e021d">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Randy Lin's Portfolio</title>
+  <meta name="description" content="Hi There! I'M Randy Lin, A TypeScript Backend Developer!">
+  <meta property="og:url" content="https://linyejoe2.github.io/portfolio/">
+  <meta property="og:title" content="Randy Lin's Portfolio">
+  <meta property="og:locale" content="en-US">
+  <meta property="og:description" content="Hi There! I'M Randy Lin, A TypeScript Backend Developer!">
+  <meta property="og:image" content="/img/logo-round.svg">
+  <meta charset="UTF-8" />
 
-  <!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 </head>
 
