--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/Main.tsx"></script>
+  <script color="200,200,200" opacity="0.8" zIndex="-1" count="99" src="./canvas.js"></script>
 </body>
 
 </html>
